--- a/index.html
+++ b/index.html
@@ -6,82 +6,49 @@
   <title>Document</title>
   <link rel="stylesheet" href="./nav-bar.css">
   <link rel="stylesheet" href="./media-query.css">
+  <link rel="stylesheet" href="./header.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <style>
-
-    header{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      
-      padding: 0 5%;
-      text-align: center;
-      margin-top: 2%;
-      margin-bottom: 8px;
+    .social-proof{
+      height: 40vh;
+    }
+    .technologies-div{
+      margin: 0 auto;
+      width: 90%;
+      height: 170px;
+      border-top: 0.4px solid rgb(202, 202, 202);
+      border-bottom: 0.4px solid rgb(202, 202, 202);
     }
 
-    .titles{
-      background-color: none;
-    }
-
-    .meet-Lumi-sentence{
-      font-size: 2rem;
-      font-weight: 500;
-      margin-bottom: 1rem;
-    }
-
-    header h1 {
-      font-size: 3.75rem;
-      font-weight: 600;
-    }
-
-    header p{
+    .technologies-div p{
       font-size: 1.4rem;
-      font-weight: 300;
-      font-style: normal;
-      margin-bottom: 1.3rem;
+      font-weight: 550;
+      text-align: center;
+      padding: 35px 0 20px 0;
     }
 
-    /* Header buttons */
-    .cta-btns{
+    .logo-track {
+      width: 90%;
       display: flex;
+      flex-direction: row;
       gap: 10px;
+      margin: 0 auto;
     }
 
-    .cta-btns a{
-      background-color: #00A9FF;
-      height: 3.2rem;
-      width: 10rem;
-      line-height: 3.2rem;
-      border-radius: 7px;
-      font-size: 1.3rem;
+    .logo-track div{
+      /* background-color: aqua; */
+      width: 25%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .cta-btns a{
-      text-decoration: none;
-      color: white;
-    }
-
-    .video-container {
-      aspect-ratio: 1011 / 449;  /* Use the exact aspect ratio of 1011:449 ≈ 2.25 */
-      max-width: 1011px;  /* The container won’t exceed 1011px */
-      margin: 0 auto;     /* Center the container horizontally */
+    .technologies-div div img{
       width: 100%;
-      padding-bottom: calc(4 / 1011 * 100%); 
-      margin-top: 2rem;
-      border-radius: 10px;
     }
 
-    .video-container iframe {
-      width: 100%;
-      height: 100%;
-      display: block;
-    }
-
-
-    
   </style>
 </head>
 <body>
@@ -134,6 +101,19 @@
     </div>
 
   </header>
+
+  <section class="social-proof">
+    <div class="technologies-div">
+      <p>Powered by the most advanced AI technology</p>
+      <div class="logo-track">
+        <div><img src="./resources/makeCOM-removebg-preview.png" alt="Technologies used to build the AI"></div>
+        <div><img src="./resources/OpenAI-black-wordmark.png" alt="Technologies used to build the AI"></div>
+        <div><img src="./resources/elevenlabs-logo-black.png" alt="Technologies used to build the AI"></div>
+        <div class="vapi-div"><img src="./resources/vapi.png" alt="Technologies used to build the AI"></div>
+      </div>
+
+    </div>
+  </section>
 
 </body>
 
