--- a/index.html
+++ b/index.html
@@ -16,39 +16,118 @@
     }
     .technologies-div{
       margin: 0 auto;
-      width: 90%;
-      height: 170px;
+      width: 75%;
+      height: auto;
       border-top: 0.4px solid rgb(202, 202, 202);
       border-bottom: 0.4px solid rgb(202, 202, 202);
+      padding-bottom: 1rem;
     }
 
     .technologies-div p{
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       font-weight: 550;
       text-align: center;
-      padding: 35px 0 20px 0;
+      padding: 2rem 0 1rem 0;
     }
 
     .logo-track {
       width: 90%;
       display: flex;
       flex-direction: row;
-      gap: 10px;
+      justify-content: center;
       margin: 0 auto;
     }
 
     .logo-track div{
       /* background-color: aqua; */
-      width: 25%;
+      width: 220px;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
     .technologies-div div img{
-      width: 100%;
+      width: 67%;
+      margin: 0;
+      padding: 0;
     }
 
+    #vapi-img {
+      width: 39%;
+    }
+
+    #make-img{
+      width: 85%;
+    }
+
+    /* adjusting images gaps */
+    .make-div{
+      margin-right: -50px; 
+    }
+    .openai-div{
+      margin-right: -25px;
+    }
+
+    .elevenlabs-div{
+      margin-right: -25px;
+    }
+
+    /* 
+  MEDIA QUERY for smaller screens:
+  Switch to a 2x2 grid and auto-height  */
+    @media (max-width: 768px) {
+      /* Let the entire section shrink to auto height on small screens */
+      .social-proof {
+        height: auto;
+      }
+
+      .technologies-div {
+        width: 90%; /* Optionally make it a bit wider or narrower */
+        padding-bottom: 2.2rem;
+      }
+
+      /* Switch to a 2×2 grid and remove negative margins/fixed widths */
+      .logo-track {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* 2 columns */
+        gap: 0rem; /* space between items */
+        justify-items: center; /* center each cell’s content */
+        margin: 0 auto; 
+      }
+
+      .logo-track div {
+        width: auto;        /* override the 220px fixed width */
+        margin-right: 0;    /* remove negative margins */
+      }
+
+      /* Make the images smaller on mobile */
+      .logo-track img {
+        width: 40% !important;         /* adjust as needed; try 70–80% for a good fit */
+        max-width: 200px;   /* optional cap so they don’t blow up too large */
+      }
+      
+      /* If you want all logos to have the same relative size, force the special cases too */
+      #vapi-img {
+        width: 25% !important;
+        max-width: 200px;
+      }
+
+      #make-img{
+        width: 49% !important;
+      }
+
+      /* Ajusting margins */
+      .make-div{
+        margin-right: -70px !important; 
+      }
+      .openai-div, .vapi-div{
+        margin-left: -55px !important;
+      }
+
+      .elevenlabs-div{
+        margin-right: -40px !important; 
+        }
+      }
   </style>
 </head>
 <body>
@@ -106,10 +185,10 @@
     <div class="technologies-div">
       <p>Powered by the most advanced AI technology</p>
       <div class="logo-track">
-        <div><img src="./resources/makeCOM-removebg-preview.png" alt="Technologies used to build the AI"></div>
-        <div><img src="./resources/OpenAI-black-wordmark.png" alt="Technologies used to build the AI"></div>
-        <div><img src="./resources/elevenlabs-logo-black.png" alt="Technologies used to build the AI"></div>
-        <div class="vapi-div"><img src="./resources/vapi.png" alt="Technologies used to build the AI"></div>
+        <div class="make-div"><img id="make-img" src="./resources/makeCOM-removebg-preview.png" alt="Technologies used to build the AI"></div>
+        <div class="openai-div"><img src="./resources/OpenAI-black-wordmark.png" alt="Technologies used to build the AI"></div>
+        <div class="elevenlabs-div"><img src="./resources/elevenlabs-logo-black.png" alt="Technologies used to build the AI"></div>
+        <div class="vapi-div"><img id="vapi-img" src="./resources/vapi.png" alt="Technologies used to build the AI"></div>
       </div>
 
     </div>
