--- a/index.html
+++ b/index.html
@@ -3,76 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Document</title>
+  <title>Lumi AI</title>
+  
   <link rel="stylesheet" href="./nav-bar.css">
   <link rel="stylesheet" href="./media-query.css">
   <link rel="stylesheet" href="./header.css">
+  <link rel="stylesheet" href="./section2.css">
+  <link rel="stylesheet" href="./section2-mobile-grid.css">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-  <style>
-    .social-proof{
-      height: 40vh;
-    }
-    .technologies-div{
-      margin: 0 auto;
-      width: 75%;
+  <style>  
+    .why-lumi{
       height: auto;
-      border-top: 0.4px solid rgb(202, 202, 202);
-      border-bottom: 0.4px solid rgb(202, 202, 202);
-      padding-bottom: 1rem;
+      padding: 60px 7rem 50px 7rem;
     }
 
-    .technologies-div p{
-      font-size: 1.2rem;
-      font-weight: 550;
+    .why-lumi h4{
+      font-size: 2rem;
       text-align: center;
-      padding: 2rem 0 1rem 0;
+      margin-bottom: 30px;
     }
 
-    .logo-track {
-      width: 90%;
+    /* Outbound card */
+    .outbound-calls{
       display: flex;
-      flex-direction: row;
-      justify-content: center;
-      margin: 0 auto;
+      flex-direction: row-reverse;
+      height: 50%;
+      margin-bottom: 70px;
     }
 
-    .logo-track div{
-      /* background-color: aqua; */
-      width: 220px;
+    /* Inbound calls */
+    .inbound-calls{
+      height: 50%;
+      margin-bottom: 50px;
+    }
+
+    /* Cards */
+    .card{
       display: flex;
-      justify-content: center;
+      gap: 20px;
+      background-color: rgb(255, 255, 255);
+      width: 50rem;
+      height: 35rem;
+      border-radius: 17px;
+
+      padding: 30px 35px;
+    }
+
+    .other-businesses, .using-lumi{
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+
+      text-align: center;
+      width: 50%;
+    }
+
+    .card-title{
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+
+    .item-card{
+      display: flex;
       align-items: center;
+      justify-content: center;
+
+      background-color: rgb(255, 255, 255);
+      width: 100%;
+      height: 20%;
+      padding: 10px;
+      border-radius: 15px;
+
+      font-size: 1rem;
+      font-weight: 550;
     }
 
-    .technologies-div div img{
-      width: 67%;
-      margin: 0;
-      padding: 0;
+    .other-businesses .item-card{
+      background-color: #FFD4D4;
     }
-
-    #vapi-img {
-      width: 39%;
+    .using-lumi .item-card{
+      background-color: #BDFFB8;
     }
-
-    #make-img{
-      width: 85%;
-    }
-
-    /* adjusting images gaps */
-    .make-div{
-      margin-right: -50px; 
-    }
-    .openai-div{
-      margin-right: -25px;
-    }
-
-    .elevenlabs-div{
-      margin-right: -25px;
-    }
-
-
   </style>
 </head>
 <body>
@@ -103,6 +117,7 @@
       <a href="#book" class="book-btn">Book</a>
     </div>
   </nav>
+
 
   <header>
     <div class="titles">
@@ -138,6 +153,75 @@
 
     </div>
   </section>
+
+  <section class="why-lumi">
+    <h4>Why Lumi is essential for your business</h4>
+    <div class="outbound-calls">
+
+      <div class="card">
+
+        <div class="other-businesses">
+          <p class="card-title">Other businesses</p>
+          <div class="item-card">No show appointments hurt revenue</div>
+          <div class="item-card">Staff spends hours making confirmation calls</div>
+          <div class="item-card">Hiring staff for follow-ups is costly</div>
+          <div class="item-card">slow responses lead to missed opportunities</div>
+        </div>
+
+        <div class="using-lumi">
+          <p class="card-title">Using Lumi</p>
+          <div class="item-card">AI sends automated reminders</div>
+          <div class="item-card">AI handles confirmations instantly</div>
+          <div class="item-card">AI follows up at a fraction of the cost</div>
+          <div class="item-card">AI calls back promptly</div>
+        </div>
+
+      </div>
+
+    </div>
+
+    <div class="inbound-calls">
+      
+      <div class="card">
+
+        <div class="other-businesses">
+          <p class="card-title">Other businesses</p>
+          <div class="item-card">Missed calls during peak hours</div>
+          <div class="item-card">Long wait times frustrate customers</div>
+          <div class="item-card">Staff overwhelmed with titive questions</div>
+          <div class="item-card">Manual booking mistakes</div>
+        </div>
+
+        <div class="using-lumi">
+          <p class="card-title">Using Lumi</p>
+          <div class="item-card">24/7 AI answering every call</div>
+          <div class="item-card">Instant response, no waiting</div>
+          <div class="item-card">AI handles FAQs automatically</div>
+          <div class="item-card">Seamless, error free auto booking</div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
+  <section class="mt-[50px] text-center">
+    <div data-orientation="horizontal" role="none" class="shrink-0 bg-border w-[1107px] h-px mx-auto"></div>
+    <h2 class="font-['Figtree',Helvetica] font-bold text-black text-[35px] mt-[50px]">Works with the Platforms You Already Use</h2>
+    <div class="flex justify-center items-center mt-[49px]">
+      <img class="object-cover mx-4" alt="SevenRooms" src="/seven-rooms-name-1.png" style="width: 178px; height: 38px;">
+      <img class="object-cover mx-4" alt="Platform 2" src="/image-7.png" style="width: 156px; height: 98px;">
+      <img class="object-cover mx-4" alt="Platform 3" src="/image-8.png" style="width: 111px; height: 70px;">
+      <img class="object-cover mx-4" alt="Platform 4" src="/image-9.png" style="width: 125px; height: 30px;">
+      <div class="bg-[url(/image-10.png)] bg-cover bg-[50%_50%]" style="width: 132px; height: 30px;">
+        
+      </div>
+      <img class="object-cover mx-4" alt="Airtable" src="/airtable-logo-svg-1.png" style="width: 138px; height: 30px;"></div>
+      <p class="font-['Figtree',Helvetica] text-black text-xl text-center mt-[30px]"><span class="font-medium">…and +</span><span class="font-bold">20 more</span><span class="font-medium"> booking platforms</span></p>
+      <div data-orientation="horizontal" role="none" class="shrink-0 bg-border w-[1107px] h-px mx-auto mt-[50px]"></div>
+    </section>
+
 
 </body>
 
