Start basis HTML structure for FAQ section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Lumi AI</title>
-  
+
   <link rel="stylesheet" href="./nav-bar.css">
   <link rel="stylesheet" href="./media-query.css">
   <link rel="stylesheet" href="./header.css">
@@ -94,7 +94,7 @@
     <!-- Logo area -->
     <div class="logo">
       <a href="index.html">
-        <img src="./resources/Lumi_new-removebg-preview.png" alt="Logo" />
+        <img src="./resources/LumiFinalLogo.png" alt="Logo" />
       </a>
     </div>
 
@@ -222,6 +222,7 @@
       <div data-orientation="horizontal" role="none" class="shrink-0 bg-border w-[1107px] h-px mx-auto mt-[50px]"></div>
     </section>
 
+    <iframe src="./faq.html" style="width: 100%; border: none; height: 100vh;"></iframe>
 
 </body>
 
