feat: add slide-up intro animation to header elements

--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
 
   <header>
     <div class="titles">
-      <p class="meet-Lumi-sentence">Meet Lumi.</p>
-      <h1>The AI Call Agent <br> that handles your business calls 24/7</h1>
-      <p>Never miss a customer call again. Lumi answers, remembers and books reservations like a human.</p>
+      <p class="meet-Lumi-sentence slide-up">Meet Lumi.</p>
+      <h1 class="slide-up">The AI Call Agent <br> that handles your business calls 24/7</h1>
+      <p class="slide-up">Never miss a customer call again. Lumi answers, remembers and books reservations like a human.</p>
     </div>
 
 
-    <div class="cta-btns">
+    <div class="cta-btns slide-up2">
       <a href=""><div class="try-btn">Try Lumi</div></a>
       <a href=""><div class="header-btn">Book a call</div></a>
     </div>
 
-    <div class="video-container">
+    <div class="video-container slide-up3">
       <iframe src="https://www.youtube.com/embed/4SNThp0YiU4?si=u03tmA0OPRWkEE4r" 
       frameborder="0" 
       allowfullscreen>
@@ -148,17 +148,16 @@
    <!-- AI Technology Section -->
    <section class="ai-tech-section" id="ai-tech">
     <div class="ai-tech-container">
+
       <!-- Top Divider Line -->
       <hr class="divider top-divider" />
 
-      <!-- Powered By Text -->
       <p class="powered-by" data-animate="slide-in-left">
         Powered by the most advanced AI technology
       </p>
 
       <!-- AI Logos Row -->
       <div class="ai-logo-grid">
-        <!-- Replace src with your actual logos or inline SVGs -->
         <div id="make" class="ai-logo-item" data-animate="slide-in-left">
           <img src="./resources/makeCOM-removebg-preview.png" alt="Make">
         </div>
@@ -243,7 +242,6 @@
 
       <!-- Logos -->
       <div class="logo-grid">
-        <!-- Replace src with your actual logo file paths or inline SVGs -->
         <div class="logo-item" data-animate="slide-in-left">
           <img src="./resources/seven rooms name.png" alt="SEVENROOMS">
         </div>
