--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-  
+
   <!-- Navigation Bar -->
   <nav class="navbar">
     <div class="nav-container">
@@ -57,7 +57,7 @@
   <header>
     <div class="titles">
       <p class="meet-Lumi-sentence slide-up">Meet Lumi.</p>
-      <h1 class="slide-up">PAGAR HMRC HOW ULTIMO DIAThe AI Call Agent <br> that handles your business calls 24/7</h1>
+      <h1 class="slide-up">The AI Call Agent <br> that handles your business calls 24/7</h1>
       <p class="slide-up">Never miss a customer call again. Lumi answers, remembers and books reservations like a human.</p>
     </div>
 
