Connect links in the htnml page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body id="home">
 
   
   <!-- Navigation Bar -->
@@ -111,7 +111,7 @@
 
 
   <!-- Why Lumi Section -->
-  <section class="why-lumi">
+  <section class="why-lumi" id="why-lumi">
     <h4>Why Lumi is essential for your business</h4>
   
     <!-- Outbound Calls Row -->
@@ -225,7 +225,7 @@
 
 
     <!-- FAQ Section -->
-  <div class="faq-section">
+  <div class="faq-section" id="faq">
     <div class="faq-container">
       <h1>Frequently Asked Questions</h1>
       <div class="faq-list">
@@ -303,9 +303,9 @@
   
       <nav class="footer-nav">
         <!-- Only three links for your three sections -->
-        <a href="#section1">Home</a>
-        <a href="#section2">Why Lumi</a>
-        <a href="#section3">FAQ</a>
+        <a href="#home">Home</a>
+        <a href="#why-lumi">Why Lumi</a>
+        <a href="#faq">FAQ</a>
       </nav>
   
       <div class="footer-copy">
